# IK-Analytical-Leg

./: .gitignore  Bezier.py  README.md  examples.py  percobaan_6.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
IK_Leg_Solver/: RandomPose.py  Trajectory.py
IK_Leg_Solver/Backup/: percobaan_14.py  percobaan_15.py  percobaan_15_.py  percobaan_16.py  percobaan_17.py  percobaan_18.py
ik_analytical_leg/: __init__.py  bezier.py  cli.py  kinematics.py  params.py  trajectory.py
scripts/: ci_check.py  generate_demo.py
