[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ik-analytical-leg"
version = "1.0.0"
description = "Pure NumPy Analytical IK/FK Solver for Humanoid Robot Leg (7-DOF)"
readme = "README.md"
license = {text = "MIT"}
keywords = ["robotics", "inverse-kinematics", "humanoid", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.5",
    "pillow>=9.0",
    "pytest>=7.0",
]
demo = [
    "matplotlib>=3.5",
    "pillow>=9.0",
]

[project.scripts]
ik-leg = "ik_analytical_leg.cli:main"

[tool.setuptools.packages.find]
include = ["ik_analytical_leg*"]
